Added trajecotry calculation for existing bodies, reworked layout, added setting to remove background

--- a/planet.kv
+++ b/planet.kv
@@ -24,8 +24,8 @@
         max:10
         #step:1
         orientation:'vertical'
-        pos_hint:{'x':-.8,'y':0}
+        pos_hint:{'x':.0,'y':0}
         size_hint:(.05,1)
         #padding:100
         value:1
-        on_value: root.children[2].zoom = self.value;
+        on_value: root.children[3].zoom = self.value;
